# famas

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README.md  TODO  TODO.md  configure  configure.ac  configure_gis.sh  configure_macports.sh
data/: extract_some_with_q2_and_n.py  fail_number_check.sh  fail_order_check.sh  get_data.sh
src/: .gitignore  Makefile.am  Makefile.in  argtable3.README  famas.c  fastq_filter.c  kseq.h.README  kseq.tar.bz2
tests/: .gitignore  basics.sh  lib.sh  pairorder.sh  run_all.sh  scan.README  split.sh  test-illumina-default.sh  test_basics.sh  test_illumina_default.sh  test_internal.sh  test_minbq50p.sh  test_nofilter.sh  test_numbermismatch.sh  test_one_too_many.sh  test_overwrite_append.sh  test_pairorder.sh  test_sample.sh  test_sanger_l30.sh  test_split.sh  test_split_every.sh  test_stdin_stdout.sh  test_valgrind.sh  test_vipr_1m.sh  valgrind.sh
tests/fastq-illumina/: GA005-PE-R00071_ACAGTG_s_3.README
tests/fastq-sanger/: mux079-pdm003.README
